# goit-pyweb-hw-07

./: alembic.ini  main.py  models.py  my_select.py  pyproject.toml  seed.py  university.db
alembic/versions/: 3df0b61f7a87_init.py
