[tool.poetry]
name = "hw-07"
version = "0.1.0"
description = ""
authors = ["MaksymSW <maksym.shvyedkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
